ZON-2838: Fix scrollbar

--- a/sass/web.site/modules/_alphabetpager.sass
+++ b/sass/web.site/modules/_alphabetpager.sass
@@ -25,6 +25,7 @@
 		justify-content: space-around
 		// compensate for margin-bottom of cp-header
 		margin: -3rem auto 0
+		overflow-x: visible
 		padding: remify(24px 0)
 		max-width: remify(760px)
 		&__item
